# gbmMAIRA

./: .gitignore  MAIRA_Deployment_Guide_v2.docx  MAIRA_Deployment_Guide_v3.docx  README.md  pyproject.toml  setup.py
maira/: __init__.py  auto_detect.py  cli.py  curve_diagnosis.py  dependency_graph.py  hyperparam_map.py  memory.py  reproducibility.py  setup_wizard.py
maira/advisor/: llm_advisor.py
maira/dataset/: dataset_architect.py
maira/reporter/: report_generator.py
maira/runner/: code_writer.py
maira/scanner/: project_scanner.py  result_parser.py  schema_detector.py
