[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "maira-ml"
version = "0.1.0"
```

**Step 5 — Create `requirements.txt`:**
```
pandas
numpy
rich
pydantic
click
requests
groq
```

**Step 6 — Create `.gitignore`:**
```
# Secrets — never commit these
maira/.config.json
maira/.memory.json

# Python
__pycache__/
*.py[cod]
*.egg-info/
dist/
build/
.eggs/

# Virtual environment
venv/
env/

# VS Code
.vscode/

# Generated experiment scripts — user's own work
*/maira/generated/

# MAIRA output files in user projects
maira_research_advice.json
maira_dataset_decisions.json
maira_report.md